--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,15 @@
 {
     "root": true,
     "parser": "@typescript-eslint/parser",
-    "plugins": ["@typescript-eslint"],
-    "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"]
+    "plugins": [
+        "@typescript-eslint",
+        "eslint-plugin-tsdoc",
+    ],
+    "extends": [
+        "eslint:recommended", 
+        "plugin:@typescript-eslint/recommended"
+    ],
+    "rules": {
+        "tsdoc/syntax": "warn"
+    }
 }
