--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
     "name": "node-template",
     "version": "0.0.0",
-    "main": "index.js",
+    "main": "dist/main.js",
+    "typings": "dist/main.d.ts",
     "repository": "git@github.com:reedHam/node-template.git",
     "author": "Reed Hambrook <reed.hambrook@gmail.com>",
     "license": "MIT",
     "private": true,
     "scripts": {
-        "dev": "pm2-dev start src/main.ts",
+        "build": "tsc",
         "lint": "eslint src",
         "fmt": "prettier --write .",
-        "postinstall": "$(yarn bin)/pm2 install typescript"
+        "postinstall": "$(yarn bin)/pm2 install typescript",
+        "clean": "rm -rf ./dist ./temp ./lib ./etc/*.md"
     },
     "dependencies": {
         "debug": "^4.3.4",
@@ -22,8 +24,7 @@
         "@typescript-eslint/eslint-plugin": "^5.30.5",
         "@typescript-eslint/parser": "^5.30.5",
         "eslint": "^8.19.0",
-        "pm2": "^5.2.0",
-        "ts-node": "^10.8.2",
+        "eslint-plugin-tsdoc": "^0.2.16",
         "typescript": "^4.7.4"
     }
 }
