--- a/.eslintrc
+++ b/.eslintrc
@@ -3,13 +3,10 @@
     "parser": "@typescript-eslint/parser",
     "plugins": [
         "@typescript-eslint",
-        "eslint-plugin-tsdoc",
+        "eslint-plugin-jsdoc"
     ],
     "extends": [
         "eslint:recommended", 
         "plugin:@typescript-eslint/recommended"
-    ],
-    "rules": {
-        "tsdoc/syntax": "warn"
-    }
+    ]
 }
