--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
         "build": "tsc",
         "lint": "eslint src",
         "fmt": "prettier --write .",
-        "postinstall": "$(yarn bin)/pm2 install typescript",
-        "clean": "rm -rf ./dist ./temp ./lib ./etc/*.md"
+        "docs": "typedoc --out docs src/main.ts"
     },
     "dependencies": {
         "debug": "^4.3.4",
         "dotenv": "^16.0.1",
+        "typedoc": "^0.23.7",
         "zod": "^3.17.3"
     },
     "devDependencies": {
@@ -24,7 +24,7 @@
         "@typescript-eslint/eslint-plugin": "^5.30.5",
         "@typescript-eslint/parser": "^5.30.5",
         "eslint": "^8.19.0",
-        "eslint-plugin-tsdoc": "^0.2.16",
+        "eslint-plugin-jsdoc": "^39.3.3",
         "typescript": "^4.7.4"
     }
 }
