--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
     "name": "node-template",
     "version": "0.0.0",
-    "main": "dist/main.js",
-    "typings": "dist/main.d.ts",
+    "main": "build/main.js",
+    "typings": "build/main.d.ts",
     "repository": "git@github.com:reedHam/node-template.git",
     "author": "Reed Hambrook <reed.hambrook@gmail.com>",
     "license": "MIT",
     "private": true,
     "scripts": {
-        "build": "tsc",
+        "dev": "tsc --watch",
+        "dev:docker": "docker-compose -f generated/docker/docker-compose.yml up dev",
+        "build": "tsc && docker-compose -f docker/compose_fragments/network.yml -f docker/compose_fragments/version.yml -f docker/docker-compose.yml --project-directory . config > generated/docker/docker-compose.yml",
+        "start": "tsc && node build/main.js",
+        "start:docker": "docker-compose -f generated/docker/docker-compose.yml up prod",
         "lint": "eslint src",
         "fmt": "prettier --write ."
     },
