--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
         "isolatedModules": true,
         "noUncheckedIndexedAccess": true,
         "sourceMap": true,
-        "outDir": "./dist",
+        "outDir": "./build",
     },
     "include": ["src/**/*.ts", "src/**/*.tsx"],
     "exclude": ["node_modules"]
