--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,6 @@
 {
     "root": true,
     "parser": "@typescript-eslint/parser",
-    "plugins": [
-        "@typescript-eslint",
-        "eslint-plugin-jsdoc"
-    ],
-    "extends": [
-        "eslint:recommended", 
-        "plugin:@typescript-eslint/recommended"
-    ]
+    "plugins": ["@typescript-eslint", "eslint-plugin-jsdoc"],
+    "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"]
 }
