--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -6,7 +6,7 @@ services:
             service: base
         image: dev-image
         build:
-            context: .
+            context: $PWD/
             dockerfile: $PWD/docker/dev.Dockerfile
         volumes:
             - $PWD/scripts:/usr/bin/app/scripts
@@ -22,6 +22,6 @@ services:
             service: base
         image: prod-image
         build:
-            context: .
+            context: $PWD/
             dockerfile: $PWD/docker/node.Dockerfile
         command: yarn prod
