--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
     "name": "node-template",
     "version": "0.0.0",
-    "main": "build/main.js",
-    "typings": "build/main.d.ts",
+    "main": "src/main.ts",
     "repository": "git@github.com:reedHam/node-template.git",
     "author": "Reed Hambrook <reed.hambrook@gmail.com>",
     "license": "MIT",
     "private": true,
     "scripts": {
-        "dev": "tsc --watch",
+        "dev": "nodemon -e ts --watch src .env --exec \"tsc --incremental && node build/main.js\"",
         "dev:docker": "yarn build && docker-compose -f generated/docker/docker-compose.yml up dev",
         "build": "tsc && yarn build:docker",
-        "build:docker": "mkdir -p generated/docker && docker-compose -f docker/compose_fragments/network.yml -f docker/compose_fragments/version.yml -f docker/docker-compose.yml --project-directory . config > generated/docker/docker-compose.yml",
-        "start": "tsc && node build/main.js",
+        "build:docker": "mkdir -p generated/docker && docker-compose -f docker/compose_fragments/network.yml -f docker/compose_fragments/version.yml -f docker/docker-compose.yml --project-directory . config > generated/docker/docker-compose.yml && docker-compose -f generated/docker/docker-compose.yml build",
+        "start": "node build/main.js",
         "start:docker": "yarn build && docker-compose -f generated/docker/docker-compose.yml up prod",
         "lint": "eslint src",
         "fmt": "prettier --write ."
@@ -24,10 +23,12 @@
     },
     "devDependencies": {
         "@types/debug": "^4.1.7",
+        "@types/node": "^18.0.3",
         "@typescript-eslint/eslint-plugin": "^5.30.5",
         "@typescript-eslint/parser": "^5.30.5",
         "eslint": "^8.19.0",
         "eslint-plugin-jsdoc": "^39.3.3",
+        "nodemon": "^2.0.19",
         "prettier": "^2.7.1",
         "typescript": "^4.7.4"
     }
